[gd_scene load_steps=11 format=3 uid="uid://bs8hbndj5guub"]

[ext_resource type="Script" uid="uid://bi0jcjouyl3oa" path="res://sound_effect.gd" id="1_0sduf"]
[ext_resource type="AudioStream" uid="uid://hq8o0fnfdc4f" path="res://Asset/Sound/Sound Effect/Button (Hover).wav" id="2_sid52"]
[ext_resource type="AudioStream" uid="uid://dgk3xvbissxsv" path="res://Asset/Sound/Sound Effect/Button (Pressed).wav" id="3_e5hn1"]
[ext_resource type="AudioStream" uid="uid://beqfih3g0f0ys" path="res://Asset/Sound/Sound Effect/Game Over (Laugh).wav" id="4_5ehhf"]
[ext_resource type="AudioStream" uid="uid://bgk85fbhc2afj" path="res://Asset/Sound/Sound Effect/Glass Single (Heavy).wav" id="5_mjlko"]
[ext_resource type="AudioStream" uid="uid://bnn6n365u14t3" path="res://Asset/Sound/Sound Effect/Score (Coin).wav" id="6_wdolw"]
[ext_resource type="AudioStream" uid="uid://dyhfdgc5a2138" path="res://Asset/Sound/Sound Effect/Sheep.wav" id="7_wxaro"]
[ext_resource type="AudioStream" uid="uid://poaucqvtmpmw" path="res://Asset/Sound/Sound Effect/Howl.wav" id="8_u1aqg"]
[ext_resource type="AudioStream" uid="uid://xxxrxcm2rk6i" path="res://Asset/Sound/Sound Effect/Pop.wav" id="9_e5hn1"]
[ext_resource type="AudioStream" uid="uid://4v6c14lhpl1u" path="res://Asset/Sound/Sound Effect/Card Flip.wav" id="10_5ehhf"]

[node name="sound effect" type="Node"]
script = ExtResource("1_0sduf")

[node name="ButtonHover" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_sid52")
volume_db = 5.0

[node name="ButtonPressed" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_e5hn1")
volume_db = 5.0

[node name="GameOver" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_5ehhf")
volume_db = 5.0

[node name="Glass" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_mjlko")
volume_db = 5.0

[node name="Score" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_wdolw")
volume_db = 5.0

[node name="Sheep" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_wxaro")
volume_db = 5.0

[node name="Wolf" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_u1aqg")
volume_db = 5.0

[node name="Pop" type="AudioStreamPlayer" parent="."]
stream = ExtResource("9_e5hn1")

[node name="flip" type="AudioStreamPlayer" parent="."]
stream = ExtResource("10_5ehhf")
